# godwoken-scripts

./: .gitmodules  Cargo.toml  README.md  capsule.toml  debug.txt  rust-toolchain
.github/workflows/: rust.yml
c/: Makefile  blockchain.mol  ckb_printf.h  common.h  generator_utils.h  godwoken.mol  gw_def.h  gw_errors.h  gw_eth_addr_reg.h  gw_registry_addr.h  gw_smt.h  gw_sudt_ckb_utils.h  overflow_add.h  sudt_utils.h  uint256.h  validator_utils.h
c-uint256-tests/: build.rs
c-uint256-tests/src/: lib.rs
c/account_lock_lib/: secp256k1.c
c/account_locks/: eth_account_lock.c  tron_account_lock.c
c/contracts/: eth_addr_reg.c  meta_contract.c  sudt.c
c/examples/: account_operation.c  recover_account.c  sudt_allowance.c  sudt_total_supply.c  sum.c
c/sha3/: sha3.h
contracts/: Cargo.toml
contracts/account-locks/eth-account-lock/: Cargo.toml  build.rs
contracts/account-locks/eth-account-lock/src/: entry.rs  error.rs  eth_signature.rs  main.rs  secp256k1_util.rs
contracts/account-locks/tron-account-lock/: Cargo.toml
contracts/always-success/: Cargo.toml
contracts/benchmark-smt/: Cargo.toml  build.rs
contracts/benchmark-smt/src/: entry.rs  main.rs  raw_data.rs
contracts/challenge-lock/: Cargo.toml
contracts/challenge-lock/src/: entry.rs  main.rs
contracts/challenge-lock/src/verifications/: context.rs  mod.rs  tx_execution.rs  tx_signature.rs  tx_state_transaction.rs  withdrawal.rs
contracts/challenge-lock/src/verifications/eip712/: types.rs
contracts/ckb-smt/: Cargo.toml  build.rs
contracts/ckb-smt/src/: bindings.rs  lib.rs  smt.rs
contracts/custodian-lock/: Cargo.toml
contracts/custodian-lock/src/: entry.rs
contracts/deposit-lock/: Cargo.toml
contracts/deposit-lock/src/: entry.rs
contracts/deposition-lock/: Cargo.toml
contracts/deposition-lock/src/: entry.rs
contracts/eth-account-lock/: Cargo.toml
contracts/eth-account-lock/src/: entry.rs  eth_signature.rs  main.rs
contracts/gw-state/src/: kv_state.rs
contracts/gw-utils/: Cargo.toml
contracts/gw-utils/src/: error.rs  finality.rs  lib.rs  signature.rs  withdrawal.rs
contracts/gw-utils/src/cells/: lock_cells.rs  rollup.rs  types.rs  utils.rs
contracts/secp256k1-utils/: Cargo.toml  build.rs
contracts/stake-lock/: Cargo.toml
contracts/stake-lock/src/: entry.rs
contracts/state-validator/: Cargo.toml
contracts/state-validator/src/: cells.rs  entry.rs  main.rs  types.rs
contracts/state-validator/src/verifications/: challenge.rs  finalize_withdrawal.rs  mod.rs  revert.rs  submit_block.rs
contracts/state-validator/src/verifications/finalize_withdrawal/: last_finalized_withdrawal.rs  mod.rs  types.rs  user_withdrawal_cells.rs  withdrawal_cursor.rs
contracts/state-validator/src/verifications/submit_block/: global_state_v2.rs
contracts/tron-account-lock/: Cargo.toml
contracts/tron-account-lock/src/: entry.rs  main.rs  tron_signature.rs
contracts/validator-lock/: Cargo.toml
contracts/validator-lock/src/: entry.rs
contracts/validator-utils/: Cargo.toml
contracts/validator-utils/src/: error.rs  kv_state.rs  lib.rs  search_cells.rs  signature.rs  type_id.rs
contracts/validator-utils/src/cells/: lock_cells.rs  rollup.rs  types.rs  utils.rs
contracts/withdrawal-lock/: Cargo.toml
contracts/withdrawal-lock/src/: entry.rs  main.rs
tests/: Cargo.toml
tests/src/script_tests/: custodian.rs  error_codes.rs  mod.rs  withdrawal.rs
tests/src/script_tests/account_lock_scripts/: eth_account_lock.rs  mod.rs  tron_account_lock.rs
tests/src/script_tests/account_lock_scripts/eth_account_lock/: mod.rs  tx.rs  withdrawal.rs
tests/src/script_tests/l2_scripts/: eth_addr_reg.rs  examples.rs  meta_contract.rs  mod.rs  sudt.rs  sudt_allowance.rs
tests/src/script_tests/l2_scripts_validator/: consume_challenge_resolve_cell.rs
tests/src/script_tests/state_validator/: cancel_challenge.rs  enter_challenge.rs  finalize_withdrawal.rs  mod.rs  revert.rs  submit_block.rs
tests/src/script_tests/state_validator/cancel_challenge/: mod.rs  tx_execution.rs  tx_signature.rs  withdrawal.rs
tests/src/script_tests/state_validator/finalize_withdrawal/: last_finalized_withdrawal.rs  user_withdrawal_cells.rs
tests/src/script_tests/state_validator/submit_block/global_state_v2/: mod.rs  remove_withdrawal_cell.rs
tests/src/script_tests/utils/: context.rs  conversion.rs  layer1.rs  mod.rs  rollup.rs
tests/src/testing_tool/: chain.rs  programs.rs
