[workspace]
members = [
  "custodian-lock",
  "deposit-lock",
  "withdrawal-lock",
  "challenge-lock",
  "stake-lock",
  "state-validator",
  "always-success",
  "account-locks/eth-account-lock",
  "account-locks/tron-account-lock",
  "validator-utils",
  "secp256k1-utils",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
overflow-checks = true
panic = 'abort'
