[workspace]
members = [
  "custodian-lock",
  "deposit-lock",
  "withdrawal-lock",
  "challenge-lock",
  "stake-lock",
  "state-validator",
  "always-success",
  "validator-lock",
  "eth-account-lock",
  "tron-account-lock",
  "validator-utils",
  "secp256k1-utils",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
overflow-checks = true
panic = 'abort'
