[workspace]
members = [
  "custodian-lock",
  "deposit-lock",
  "withdrawal-lock",
  "challenge-lock",
  "stake-lock",
  "state-validator",
  "always-success",
  "eth-account-lock",
  "tron-account-lock",
  "validator-utils",
  "secp256k1-utils",
  "benchmark-smt",
]

[profile.release]
codegen-units = 1
lto = false
opt-level = 's'
overflow-checks = true
panic = 'abort'

[patch.crates-io]
sparse-merkle-tree = { path = '../sparse-merkle-tree' }
