[package]
name = "gw-tests"
version = "0.1.0"
authors = ["Nervos network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-common = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-config = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-db = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-store = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-traits = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-generator = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-chain = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-mem-pool = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-block-producer = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
gw-ckb-hardfork = { git = "https://github.com/jjyr/godwoken.git", rev = "08c180d3a6c6b657ec0df9dad03e465b63dfd752" }
parking_lot = "0.11"
anyhow = "1.0"
blake2b-rs = "0.2"
thiserror = "1.0"
lazy_static = "1.4"
secp256k1 = { version = "0.20", features = ["recovery", "rand-std"] }
sha3 = "0.9.1"
hex = "0.4.2"
ckb-script = "0.100.0"
ckb-types = "0.100.0"
ckb-error = "0.100.0"
ckb-crypto = "0.100.0"
ckb-hash = "0.100.0"
ckb-traits = "0.100.0"
ckb-fixed-hash = "0.100.0"
ckb-chain-spec = "0.100.0"
rand = "0.8"
env_logger = "0.8"
# Remove this after CKB fixed the dependencies issue
ckb-vm = { version = "=0.20.0-rc5", features = ["detect-asm"] }
ckb-vm-definitions = "=0.20.0-rc5"
tentacle-multiaddr = "=0.2.0"
molecule = "=0.6.0"
tempfile = "3"
tokio = "1.15"
