[package]
name = "gw-tests"
version = "0.1.0"
authors = ["Nervos network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-config = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-db = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-store = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-traits = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-generator = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d", features = ["detect-asm", "unhandled-execution"] }
gw-chain = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-mem-pool = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-block-producer = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
gw-utils = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "3e160758e98b28eced0e0a6be7088483b1ed280d" }
async-trait = "0.1"
anyhow = "1.0"
blake2b-rs = "0.2"
thiserror = "1.0"
lazy_static = "1.4"
secp256k1 = { version = "0.20", features = ["recovery", "rand-std"] }
sha3 = "0.9.1"
hex = "0.4.2"
ckb-script = "0.104.0"
ckb-types = "0.104.0"
ckb-error = "0.104.0"
ckb-crypto = "0.104.0"
ckb-hash = "0.104.0"
ckb-traits = "0.104.0"
ckb-fixed-hash = "0.104.0"
rand = "0.8"
env_logger = "0.8"
tentacle-multiaddr = "=0.2.0"
molecule = "=0.7.3"
tempfile = "3"
tokio = "1.15"
