[package]
name = "deposition-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
blake2b-rs = "0.1.5"

[dependencies]
gw-types = {git = "https://github.com/jjyr/godwoken.git", branch = "generator-check-contract-script-args", default-features = false }
validator-utils = { path = "../validator-utils" }
