[package]
name = "gw-utils"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "afb6521b6048f9a08a602b27fdcd8657402a99c0", default-features = false }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "afb6521b6048f9a08a602b27fdcd8657402a99c0", default-features = false }
