[package]
name = "gw-utils"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
gw-types = { git = "https://github.com/jjyr/godwoken.git", rev = "0a4addb521b40b11a4ffa9a3eef29fe7280585ff", default-features = false }
gw-common = { git = "https://github.com/jjyr/godwoken.git", rev = "0a4addb521b40b11a4ffa9a3eef29fe7280585ff", default-features = false }
