[package]
name = "validator-utils"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.4"
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "aeb5a94f8c9bb3642fd1ee5e794ad61a77a54c29", default-features = false }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "aeb5a94f8c9bb3642fd1ee5e794ad61a77a54c29", default-features = false }
