[package]
name = "validator-utils"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.4"
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "85aa5607edda6386a7aa762f4cfd53c998fa97af", default-features = false }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "85aa5607edda6386a7aa762f4cfd53c998fa97af", default-features = false }
