[package]
name = "eth-account-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator-utils = { path = "../../validator-utils" }
secp256k1-utils = { path = "../../secp256k1-utils" }
sha3 = { version = "0.9", default-features = false }
